--- a/notebooks.html
+++ b/notebooks.html
@@ -59,13 +59,13 @@
 				<div class="photograhy">
 					<div class="row no-gutters">
 						<div class="col-md-3">
-							<a href="notebooks/python.html" style='color:  #505050'>
+							<a href="notebooks/python.html">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3>Intro to Python</h3>
-									<span style='color:  #202020'>Demo: The basics of Python + Numpy & Pandas</span>
-									<span style='color:  #202020'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black>Intro to Python</h3>
+									<span style='color:  black>Demo: The basics of Python + Numpy & Pandas</span>
+									<span style='color:  black><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -85,9 +85,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>Intro to Regression</h3>
-									<span style='color:  #505050'>Demo: The basics of Linear Regression and Neural Nets for Regression</span>
-									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black>Intro to Regression</h3>
+									<span style='color:  black>Demo: The basics of Linear Regression and Neural Nets for Regression</span>
+									<span style='color:  black><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>	
@@ -97,8 +97,8 @@
 								<div class="text text-center">
 									<br>  </br>
 									<h3>Intro to Classification</h3>
-									<span style='color:  #202020'>Demo: The basics of Logistics Regression and Neural Nets for Classification</span>
-									<span style='color:  #202020'><br><br>Currently in pt-br</span>
+									<span style='color:  #505050'>Demo: The basics of Logistics Regression and Neural Nets for Classification</span>
+									<span style='color:  #505050'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -107,9 +107,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>Intro to Clustering</h3>
-									<span style='color:  #505050'>Demo: The basics of Clustering with K-Means</span>
-									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black>Intro to Clustering</h3>
+									<span style='color:  black>Demo: The basics of Clustering with K-Means</span>
+									<span style='color:  black><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -123,8 +123,8 @@
 								<div class="text text-center">
 									<br>  </br>
 									<h3>Optimization 1</h3>
-									<span style='color:  #202020'>Demo: Newton-Raphson</span>
-									<span style='color:  #202020'><br><br>Currently in pt-br</span>
+									<span style='color:  #505050'>Demo: Newton-Raphson</span>
+									<span style='color:  #505050'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -133,9 +133,9 @@
 									<div class="overlay"></div>
 									<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>Optimization 2</h3>
-									<span style='color:  #505050'>Demo: Simulated Annealing</span>
-									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black>Optimization 2</h3>
+									<span style='color:  black>Demo: Simulated Annealing</span>
+									<span style='color:  black><br><br>Currently in pt-br</span>
 
 								</div>
 							</a>
@@ -146,8 +146,8 @@
 								<div class="text text-center">
 									<br>  </br>
 									<h3>Text classification 1</h3>
-									<span style='color:  #202020'>Demo: Doc2Vec + K-Nearest Neighbours</span>
-									<span style='color:  #202020'><br><br>Currently in pt-br</span>
+									<span style='color:  #505050'>Demo: Doc2Vec + K-Nearest Neighbours</span>
+									<span style='color:  #505050'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -156,9 +156,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #202020'>Text classification 2</h3>
-									<span style='color:  #202020'>Demo: Tf-Idf + Logistic Regression with feature selection</span>
-									<span style='color:  #202020'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black>Text classification 2</h3>
+									<span style='color:  black>Demo: Tf-Idf + Logistic Regression with feature selection</span>
+									<span style='color:  black><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
