--- a/notebooks.html
+++ b/notebooks.html
@@ -63,9 +63,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  black>Intro to Python</h3>
-									<span style='color:  black>Demo: The basics of Python + Numpy & Pandas</span>
-									<span style='color:  black><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Intro to Python</h3>
+									<span style='color:  black'>Demo: The basics of Python + Numpy & Pandas</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -85,9 +85,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  black>Intro to Regression</h3>
-									<span style='color:  black>Demo: The basics of Linear Regression and Neural Nets for Regression</span>
-									<span style='color:  black><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Intro to Regression</h3>
+									<span style='color:  black'>Demo: The basics of Linear Regression and Neural Nets for Regression</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>	
@@ -96,7 +96,7 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3>Intro to Classification</h3>
+									<h3 style='color:  #505050'>Intro to Classification</h3>
 									<span style='color:  #505050'>Demo: The basics of Logistics Regression and Neural Nets for Classification</span>
 									<span style='color:  #505050'><br><br>Currently in pt-br</span>
 								</div>
@@ -107,9 +107,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  black>Intro to Clustering</h3>
-									<span style='color:  black>Demo: The basics of Clustering with K-Means</span>
-									<span style='color:  black><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Intro to Clustering</h3>
+									<span style='color:  black'>Demo: The basics of Clustering with K-Means</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -122,7 +122,7 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3>Optimization 1</h3>
+									<h3 style='color:  #505050'>Optimization 1</h3>
 									<span style='color:  #505050'>Demo: Newton-Raphson</span>
 									<span style='color:  #505050'><br><br>Currently in pt-br</span>
 								</div>
@@ -133,9 +133,9 @@
 									<div class="overlay"></div>
 									<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  black>Optimization 2</h3>
-									<span style='color:  black>Demo: Simulated Annealing</span>
-									<span style='color:  black><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Optimization 2</h3>
+									<span style='color:  black'>Demo: Simulated Annealing</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 
 								</div>
 							</a>
@@ -145,7 +145,7 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3>Text classification 1</h3>
+									<h3 style='color:  #505050'>Text classification 1</h3>
 									<span style='color:  #505050'>Demo: Doc2Vec + K-Nearest Neighbours</span>
 									<span style='color:  #505050'><br><br>Currently in pt-br</span>
 								</div>
@@ -156,9 +156,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  black>Text classification 2</h3>
-									<span style='color:  black>Demo: Tf-Idf + Logistic Regression with feature selection</span>
-									<span style='color:  black><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Text classification 2</h3>
+									<span style='color:  black'>Demo: Tf-Idf + Logistic Regression with feature selection</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
