--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
     		<div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="mb-4">E-mail me:</h1>
-            <h5><a href="mailto:felipemaiapolo@gmail.com" class="btn-custom" style='color: black''>felipemaiapolo@gmail.com</a></h5>
+            <p><a href="mailto:felipemaiapolo@gmail.com" class="btn-custom" style='color: black''>felipemaiapolo@gmail.com</a></p>
           </div>
         </div>
     		
