--- a/notebooks.html
+++ b/notebooks.html
@@ -113,6 +113,18 @@
 								</div>
 							</a>
 						</div>
+	  					
+	  					<div class="col-md-3">
+							<a href="notebooks/bayesian_nn.html">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<br>  </br>
+									<h3 style='color:  black'>Bayesian Neural Nets</h3>
+									<span style='color:  black'>Demo in construction</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
+								</div>
+							</a>
+						</div>
 						
 		
 
