--- a/notebooks/bayesian_nn.html
+++ b/notebooks/bayesian_nn.html
@@ -22199,7 +22199,7 @@ CjsAAAAAI4HCDgAAAMBIoLADAAAAMBIo7AAAAACMBAo7AAAAACOBwg4AAADASPw/3IN5oaGK
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Checando os autovalores de Cov (todos devem ser não negativos, pois $\mathbf{w}_{\text{MAP}}$ nos dá um máximo local:</p>
+<p>Checando os autovalores de Cov (todos devem ser não negativos, pois se trata de uma matrix de covariância):</p>
 
 </div>
 </div>
