--- a/notebooks.html
+++ b/notebooks.html
@@ -185,7 +185,7 @@
 								<div class="text text-center">
 									<br>  </br>
 									<h3 style='color:  #505050'>Money & Inflation</h3>
-									<span style='color:  #505050'>Demo: How does money supply (M1) relate to inflation (IGP) in Brazil?</span>
+									<span style='color:  #505050'>Demo: How does money supply (M1) relate to price level (IGP) in Brazil?</span>
 									<span style='color:  #505050'><br><br>Interactive</span>
 								</div>
 							</a>
