--- a/notebooks.html
+++ b/notebooks.html
@@ -97,7 +97,7 @@
 								<div class="text text-center">
 									<br>  </br>
 									<h3 style='color:  #505050'>Intro to Classification</h3>
-									<span style='color:  #505050'>Demo: The basics of Logistics Regression and Neural Nets for Classification</span>
+									<span style='color:  #505050'>Demo: The basics of Logistic Regression and Neural Nets for Classification</span>
 									<span style='color:  #505050'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
