--- a/notebooks.html
+++ b/notebooks.html
@@ -176,7 +176,7 @@
 						</div>
 
 						<div class="col-md-3">
-							<a href="notebooks/ponte_de_corte.html">
+							<a href="notebooks/decision.html">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
