--- a/notebooks.html
+++ b/notebooks.html
@@ -59,6 +59,17 @@
 				<div class="photograhy">
 					<div class="row no-gutters">
 						<div class="col-md-3">
+							<a href="notebooks/covidSP.html">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<br>  </br>
+									<h3 style='color:  black'>Predicting COVID-19</h3>
+									<span style='color:  black'>Demo: Predicting COVID-19 in São Paulo, Brazil, using Bayesian Regression</span>
+									<span style='color:  black'><br><br>Currently in english</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
 							<a href="notebooks/python.html">
 								<div class="overlay"></div>
 								<div class="text text-center">
