--- a/notebooks/covidSP.html
+++ b/notebooks/covidSP.html
@@ -13324,18 +13324,18 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>It is possible to see an exponential trend. I am assuming the exponential trend we continue for the next weeks and we are going to use the exponential function to model out variable of interest. The exponential function can be defined as follows:</p>
-\begin{align}
+\begin{align}\\
     f(t,K,\beta_1)&amp;=K \cdot \text{exp}[\beta_1 \cdot t] \\ \\
 \end{align}<p>With $K&gt;0$ being a positive random variable and $\beta_1&gt;0$ being the random growth rate. Adding a stochastic term $\varepsilon&gt;0$ to our equation, we get</p>
-\begin{align}
+\begin{align}\\
     f(t,K,\beta_1, \varepsilon)&amp;=K \cdot \varepsilon \cdot \text{exp}[\beta_1 \cdot t] \\ \\
 \end{align}<p>We define $\varepsilon$ as being LogNormal random variable with parameters $0$ and $\sigma^2$, that is $\varepsilon \sim \text{LogNormal}(0,\sigma^2)$. Taking the log in both sides, we get</p>
-\begin{align}
+\begin{align}\\
     \tilde{f}(t,K,\beta_1, \varepsilon)&amp;=\text{log}[f(t,K,\beta_1, \varepsilon)]\\ \\
     &amp;=\text{log}(K)+ \beta_1 \cdot t + \varepsilon\\ \\
     &amp;=\beta_0+ \beta_1 \cdot t + \varepsilon \\ \\
 \end{align}<p>With $\beta_0=\text{log}(K)$ and $\tilde{\varepsilon}=\text{log}(\varepsilon) \sim N(0,\sigma^2)$. If we define $\tilde{y}=\text{log}(y)$, we are modelling our variable of interest in the following way:</p>
-\begin{align}
+\begin{align}\\
     \tilde{y}|t,\beta_0,\beta_1,\sigma \sim N\Big(\beta_0+ \beta_1 \cdot t, \sigma^2 \Big)
 \end{align}<p>Let's visualize the log of the number of cases:</p>
 
@@ -13709,7 +13709,7 @@ convergence, Rhat=1).
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Looking to Rhat and traceplots, it seems our chain has converged. Also, no convergence issues were detected by Stan.</p>
 <p>Out main interest we be in the distribution of the <strong>expected</strong> number of cases. Mathematically, we will be interested in the distribution of the following random variable:</p>
-\begin{align}
+\begin{align}\\
  \mu(t)_{K,\beta_1}&amp;=\mathbb{E}\Big[f(t,K,\beta_1,\varepsilon )|K,\beta_1 \Big] \\ \\
  &amp;=\mathbb{E}\Big[K \cdot \varepsilon \cdot \text{exp}[\beta_1 \cdot t] |K,\beta_1 \Big] \\ \\
  &amp;=K \cdot \text{exp}[\beta_1 \cdot t] \cdot \mathbb{E}\Big[\varepsilon |K,\beta_1 \Big] \\ \\
@@ -13875,7 +13875,7 @@ convergence, Rhat=1).
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[92]:</div>
+<div class="prompt input_prompt">In&nbsp;[93]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">f</span><span class="p">,</span> <span class="n">axes</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">subplots</span><span class="p">(</span><span class="mi">3</span><span class="p">,</span> <span class="mi">3</span><span class="p">,</span> <span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">15</span><span class="p">,</span> <span class="mi">12</span><span class="p">),</span><span class="n">sharex</span><span class="o">=</span><span class="s1">&#39;row&#39;</span><span class="p">)</span>
@@ -13909,7 +13909,7 @@ convergence, Rhat=1).
 <span class="n">t</span><span class="o">=</span><span class="mi">44</span>
 <span class="n">sns</span><span class="o">.</span><span class="n">distplot</span><span class="p">(</span><span class="n">output</span><span class="p">[</span><span class="n">t</span><span class="p">,:],</span> <span class="n">ax</span><span class="o">=</span><span class="n">axes</span><span class="p">[</span><span class="mi">2</span><span class="p">,</span> <span class="mi">2</span><span class="p">],</span><span class="n">axlabel</span><span class="o">=</span><span class="s2">&quot;Casos esperados em &quot;</span><span class="o">+</span><span class="n">date_delta</span><span class="p">(</span><span class="n">t</span><span class="p">,</span><span class="s1">&#39;26/02/2020&#39;</span><span class="p">)</span><span class="o">+</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2"> (&quot;</span><span class="o">+</span><span class="nb">str</span><span class="p">(</span><span class="n">t</span><span class="p">)</span><span class="o">+</span><span class="s2">&quot;º dia após o 1º caso)&quot;</span><span class="p">)</span>
 
-<span class="c1">#plt.savefig(&#39;covid3.png&#39;, dpi=None)</span>
+<span class="n">plt</span><span class="o">.</span><span class="n">savefig</span><span class="p">(</span><span class="s1">&#39;covid3.png&#39;</span><span class="p">,</span> <span class="n">dpi</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
         
 <span class="n">plt</span><span class="o">.</span><span class="n">show</span><span class="p">()</span>
 </pre></div>
