--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="projects.html" style='color: #383838'>Projects & Research</a></li>
 					<li><a href="notebooks.html" style='color: #383838'>Jupyter/Demos</a></li>
-					<li><a href="about.html" style='color: #383838'>About</a></li>
+					<li><a href="about.html" style='color: #383838'>CV</a></li>
 				</ul>
 			</nav>
 
