--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<div class="desc">
 							<h2 class="subheading" style='color: #202020'>Hello, How are you? I'm</h2> 
 							<h1 class="mb-4" style='color:  #202020'>Felipe</h1>
-							<p class="mb-4" style='color:  black''>I am currently pursuing a master's degree in statistics at the University of São Paulo (Brazil), giving special focus to the following subjects: probabilistic machine learning, Bayesian inference, high dimensional statistics and applications in education and law. Looking for opportunities as a PhD student.</p>
+							<p class="mb-4" style='color:  black''>I am currently pursuing a master's degree in statistics at the University of São Paulo (Brazil), giving special focus to the following subjects: probabilistic machine learning, Bayesian inference, high dimensional statistics and applications. Looking for opportunities as a PhD student.</p>
 							
 
 						</div>
