--- a/notebooks.html
+++ b/notebooks.html
@@ -134,13 +134,25 @@
 							</a>
 						</div>
 	  					
+						<div class="col-md-3">
+							<a href="notebooks/econ_bayes.html">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<br>  </br>
+									<h3 style='color:  black'>Applied Gibbs Sampler to Bayesian Analysis</h3>
+									<span style='color:  black'>From Scratch</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
+								</div>
+							</a>
+						</div>
+
 	  					<div class="col-md-3">
 							<a href="notebooks/bayesian_nn.html">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
 									<h3 style='color:  black'>Bayesian Neural Nets</h3>
-									<span style='color:  black'>Demo in construction</span>
+									<span style='color:  black'>From Scratch</span>
 									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
