--- a/notebooks.html
+++ b/notebooks.html
@@ -135,7 +135,7 @@
 						</div>
 	  					
 						<div class="col-md-3">
-							<a href="notebooks/econ_bayes.html">
+							<a href="notebooks/bayes_econ.html">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
