--- a/about.html
+++ b/about.html
@@ -45,9 +45,8 @@
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
-					<li><a href="projects.html" style='color: #383838'>Projects & Research</a></li>
 					<li><a href="notebooks.html" style='color: #383838'>Jupyter/Demos</a></li>
-					<li><a href="about.html" style='color: #383838'>CV</a></li>
+					<li><a href="https://drive.google.com/open?id=1PnhcMhhRpPqAUNhKwEbIn5a_sWnfhfzC" style='color: #383838'>CV</a></li>
 				</ul>
 			</nav>
 
