--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="notebooks.html" style='color: #383838'>Jupyter/Demos</a></li>
 					<li><a href="https://drive.google.com/open?id=1PnhcMhhRpPqAUNhKwEbIn5a_sWnfhfzC" style='color: #383838'>CV</a></li>
+					<li><a href="https://drive.google.com/file/d/1YgC-7TwOBNOYQzD9aqPgfQwksO-5Hm25/view?usp=sharing" style='color: #383838'>mini-CV</a></li>
 				</ul>
 			</nav>
 
@@ -72,7 +73,7 @@
 						<div class="desc">
 							<h2 class="subheading" style='color: #202020'>Hello, How are you? I'm</h2> 
 							<h1 class="mb-4" style='color:  #202020'>Felipe</h1>
-							<p class="mb-4" style='color:  black''>I am currently pursuing a master's degree in statistics at the University of São Paulo (Brazil), giving special focus to the following subjects: probabilistic machine learning, Bayesian inference, high-dimensional statistics and applications. I am also interested to learn more about interpretable models and causal inference.</p>
+							<p class="mb-4" style='color:  black''>I am currently pursuing a master's degree in statistics at the University of São Paulo (Brazil). My main interests are probabilistic machine learning, statistical computing, Bayesian inference, high-dimensional statistics and applications..</p>
 							
 
 						</div>
