--- a/notebooks.html
+++ b/notebooks.html
@@ -132,7 +132,42 @@
 								</div>
 							</a>
 						</div>
-	  					
+	
+	  					<div class="col-md-3">
+							<a href="notebooks/decision.html">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<br>  </br>
+									<h3 style='color:  #505050'>Decision Theory</h3>
+									<span style='color:  #505050'>Demo: How to choose the best binary classifier threshold?</span>
+									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-md-3">
+							<a href="notebooks/keras-tensorflow.html">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<br>  </br>
+									<h3 style='color:  #505050'>An Intro to Tensorflow/Keras</h3>
+									<span style='color:  #505050'>Demo: Building your first Neural Networks.</span>
+									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-md-3">
+							<a href="notebooks/class-log-reg.html">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<br>  </br>
+									<h3 style='color:  #505050'>Exploring Logistic Regression</h3>
+									<span style='color:  #505050'>Demo: An alternative intro to classification and logistic regression.</span>
+									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+								</div>
+							</a>
+						</div>
 						<div class="col-md-3">
 							<a href="notebooks/bayes_econ.html">
 								<div class="overlay"></div>
