--- a/notebooks.html
+++ b/notebooks.html
@@ -93,9 +93,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>Intro to Prob & Stats</h3>
-									<span style='color:  #505050'>Demo: The basics of probability, descriptive stats and inference</span>	
-									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Intro to Prob & Stats</h3>
+									<span style='color:  black'>Demo: The basics of probability, descriptive stats and inference</span>	
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -115,9 +115,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>Intro to Classification</h3>
-									<span style='color:  #505050'>Demo: The basics of Logistic Regression and Neural Nets for Classification</span>
-									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Intro to Classification</h3>
+									<span style='color:  black'>Demo: The basics of Logistic Regression and Neural Nets for Classification</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -138,9 +138,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>Decision Theory</h3>
-									<span style='color:  #505050'>Demo: How to choose the best binary classifier threshold?</span>
-									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Decision Theory</h3>
+									<span style='color:  black'>Demo: How to choose the best binary classifier threshold?</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -150,9 +150,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>An Intro to Tensorflow/Keras</h3>
-									<span style='color:  #505050'>Demo: Building your first Neural Networks.</span>
-									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>An Intro to Tensorflow/Keras</h3>
+									<span style='color:  black'>Demo: Building your first Neural Networks.</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -162,9 +162,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>Exploring Logistic Regression</h3>
-									<span style='color:  #505050'>Demo: An alternative intro to classification and logistic regression.</span>
-									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Exploring Logistic Regression</h3>
+									<span style='color:  black'>Demo: An alternative intro to classification and logistic regression.</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -200,9 +200,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>Optimization 1</h3>
-									<span style='color:  #505050'>Demo: Newton-Raphson</span>
-									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Optimization 1</h3>
+									<span style='color:  black'>Demo: Newton-Raphson</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -223,9 +223,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>Text classification 1</h3>
-									<span style='color:  #505050'>Demo: Doc2Vec + K-Nearest Neighbours</span>
-									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Text classification 1</h3>
+									<span style='color:  black'>Demo: Doc2Vec + K-Nearest Neighbours</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -246,9 +246,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>Decision Theory</h3>
-									<span style='color:  #505050'>Demo: How to choose the best binary classifier threshold?</span>
-									<span style='color:  #505050'><br><br>Currently in pt-br</span>
+									<h3 style='color:  black'>Decision Theory</h3>
+									<span style='color:  black'>Demo: How to choose the best binary classifier threshold?</span>
+									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
 							</a>
 						</div>
@@ -261,9 +261,9 @@
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  #505050'>Money & Inflation</h3>
-									<span style='color:  #505050'>Demo: How does money supply (M1) relate to price level (IGP) in Brazil?</span>
-									<span style='color:  #505050'><br><br>Interactive</span>
+									<h3 style='color:  black'>Money & Inflation</h3>
+									<span style='color:  black'>Demo: How does money supply (M1) relate to price level (IGP) in Brazil?</span>
+									<span style='color:  black'><br><br>Interactive</span>
 								</div>
 							</a>
 						</div>
