--- a/notebooks.html
+++ b/notebooks.html
@@ -146,11 +146,11 @@
 						</div>
 
 						<div class="col-md-3">
-							<a href="notebooks/keras-tensorflow.html">
+							<a href="notebooks/tensorflowkeras.html">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
-									<h3 style='color:  black'>An Intro to Tensorflow/Keras</h3>
+									<h3 style='color:  black'>Intro to Tensorflow/Keras</h3>
 									<span style='color:  black'>Demo: Building your first Neural Networks.</span>
 									<span style='color:  black'><br><br>Currently in pt-br</span>
 								</div>
@@ -158,7 +158,7 @@
 						</div>
 
 						<div class="col-md-3">
-							<a href="notebooks/class-log-reg.html">
+							<a href="notebooks/classreglog.html">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<br>  </br>
