--- a/notebooks.html
+++ b/notebooks.html
@@ -47,6 +47,7 @@
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="notebooks.html" style='color: #383838'>Jupyter/Demos</a></li>
 					<li><a href="https://drive.google.com/open?id=1PnhcMhhRpPqAUNhKwEbIn5a_sWnfhfzC" style='color: #383838'>CV</a></li>
+					<li><a href="https://drive.google.com/file/d/1YgC-7TwOBNOYQzD9aqPgfQwksO-5Hm25/view?usp=sharing" style='color: #383838'>mini-CV</a></li>
 				</ul>
 			</nav>
 
