--- a/notebooks.html
+++ b/notebooks.html
@@ -65,6 +65,17 @@
 				<div class="photograhy">
 					<div class="row no-gutters">
 						<div class="col-md-3">
+							<a href="notebooks/comparing_models.html">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<br>  </br>
+									<h3 style='color:  black'>Comparing Statistical Models</h3>
+									<span style='color:  black'>Theory: how to decide which model is better?</span>
+									<span style='color:  black'><br><br>Currently in english</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-md-3">
 							<a href="notebooks/covidSP.html">
 								<div class="overlay"></div>
 								<div class="text text-center">
