--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
-					<li><a href="notebooks.html" style='color: #383838'>Jupyter/Demos</a></li>
+					<li><a href="notebooks.html" style='color: #383838'>Notebooks</a></li>
 					<li><a href="https://drive.google.com/open?id=1PnhcMhhRpPqAUNhKwEbIn5a_sWnfhfzC" style='color: #383838'>CV</a></li>
-					<li><a href="https://drive.google.com/file/d/1YgC-7TwOBNOYQzD9aqPgfQwksO-5Hm25/view?usp=sharing" style='color: #383838'>mini-CV</a></li>
+					<li><a href="https://scholar.google.com/citations?user=CJbgmnkAAAAJ&hl=en&oi=ao" style='color: #383838'>Google Scholar</a></li>
 				</ul>
 			</nav>
 
@@ -70,7 +70,7 @@
 						<div class="desc">
 							<h2 class="subheading" style='color: #202020'>Hello, How are you? I'm</h2> 
 							<h1 class="mb-4" style='color:  #202020'>Felipe</h1>
-							<p class="mb-4" style='color:  black''>I am currently pursuing a master's degree in Statistics at the University of São Paulo (Brazil).</p>
+							<p class="mb-4" style='color:  black''>I am currently pursuing a master's degree in Statistics at the University of São Paulo (Brazil). You can check the work I have been doing in research by checking my Google Scholar page.</p>
 							
 
 						</div>
