--- a/notebooks.html
+++ b/notebooks.html
@@ -45,9 +45,9 @@
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
-					<li><a href="notebooks.html" style='color: #383838'>Jupyter/Demos</a></li>
+					<li><a href="notebooks.html" style='color: #383838'>Notebooks</a></li>
 					<li><a href="https://drive.google.com/open?id=1PnhcMhhRpPqAUNhKwEbIn5a_sWnfhfzC" style='color: #383838'>CV</a></li>
-					<li><a href="https://drive.google.com/file/d/1YgC-7TwOBNOYQzD9aqPgfQwksO-5Hm25/view?usp=sharing" style='color: #383838'>mini-CV</a></li>
+					<li><a href="https://scholar.google.com/citations?user=CJbgmnkAAAAJ&hl=en&oi=ao" style='color: #383838'>Google Scholar</a></li>
 				</ul>
 			</nav>
 
