--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<div class="desc">
 							<h2 class="subheading" style='color: #202020'>Hello, How are you? I'm</h2> 
 							<h1 class="mb-4" style='color:  #202020'>Felipe</h1>
-							<p class="mb-4" style='color:  black''>I am currently pursuing a master's degree in Statistics at the University of São Paulo (Brazil). You can check the work I have been doing in research by checking my Google Scholar page.</p>
+							<p class="mb-4" style='color:  black''>I am currently pursuing a master's degree in Statistics at the University of São Paulo (Brazil). You can check the work I have been doing in research by visiting my Google Scholar page.</p>
 							
 
 						</div>
