--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@
 					<li><a href="https://drive.google.com/open?id=1PnhcMhhRpPqAUNhKwEbIn5a_sWnfhfzC" style='color: #383838'>CV</a></li>
 					<li><a href="https://scholar.google.com/citations?user=CJbgmnkAAAAJ&hl=en&oi=ao" style='color: #383838'>Google Scholar</a></li>
 				</ul>
-			</nav>
-
-			<div class="colorlib-footer">
+				
 				<ul>
 					<li><a href="https://www.linkedin.com/in/felipemaiapolo/?locale=en_US"><i class="icon-linkedin"></i></a></li>
 					<li><a href="https://github.com/felipemaiapolo"><i class="icon-github"></i></a></li>
 				</ul>
-			</div>
+			</nav>
+
+			<!--<div class="colorlib-footer">-->
+				
+			<!--</div>-->
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
 			<div class="hero-wrap js-fullheight" style="background-image: url(images/bg.jpg);" data-stellar-background-ratio="0.5">
