--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
 					<li><a href="notebooks.html" style='color: #383838'>Notebooks</a></li>
 					<li><a href="https://drive.google.com/open?id=1PnhcMhhRpPqAUNhKwEbIn5a_sWnfhfzC" style='color: #383838'>CV</a></li>
 					<li><a href="https://scholar.google.com/citations?user=CJbgmnkAAAAJ&hl=en&oi=ao" style='color: #383838'>Google Scholar</a></li>
-					<li><a href="https://www.linkedin.com/in/felipemaiapolo/?locale=en_US"><i class="icon-linkedin"></i></a></li>
-					<li><a href="https://github.com/felipemaiapolo"><i class="icon-github"></i></a></li>
 				</ul>
+				<div class="colorlib-footer">
+				<ul>
+					<li><a href="https://www.linkedin.com/in/felipemaiapolo/?locale=en_US"><i class="icon-linkedin"></i></a></li>
+					<li><a href="https://github.com/felipemaiapolo"><i class="icon-github"></i></a></li>				
+				</ul>
+				</div>
 
 			</nav>
 		</aside> <!-- END COLORLIB-ASIDE -->
