--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 					<li><a href="notebooks.html" style='color: #383838'>Notebooks</a></li>
 					<li><a href="https://drive.google.com/open?id=1PnhcMhhRpPqAUNhKwEbIn5a_sWnfhfzC" style='color: #383838'>CV</a></li>
 					<li><a href="https://scholar.google.com/citations?user=CJbgmnkAAAAJ&hl=en&oi=ao" style='color: #383838'>Google Scholar</a></li>
+					<li><a href="https://www.researchgate.net/profile/Felipe_Maia_Polo" style='color: #383838'>ResearchGate</a></li>
 					<li><a href="https://www.linkedin.com/in/felipemaiapolo/?locale=en_US" style='color: #383838'>LinkedIn</a></li>
 					<li><a href="https://github.com/felipemaiapolo" style='color: #383838'>GitHub</a></li>
 				</ul>
