--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<div class="desc">
 							<h2 class="subheading" style='color: #202020'>Hello, How are you? I'm</h2> 
 							<h1 class="mb-4" style='color:  #202020'>Felipe</h1>
-							<p class="mb-4" style='color:  black''>I am first year Statistics PhD student at the University of Michigan (USA). You can check the work I have been doing by visiting my Google Scholar page. <br> <br> E-mail: felipemaiapolo@gmail.com</p>
+							<p class="mb-4" style='color:  black''>I am a first year Statistics PhD student at the University of Michigan (USA). You can check the work I have been doing by visiting my Google Scholar page. <br> <br> E-mail: felipemaiapolo@gmail.com</p>
 							
 
 						</div>
