--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
     		<div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="mb-4">E-mail me:</h2>
-             <p><a href="mailto:felipemaiapolo@gmail.com" class="btn-custom" style='color: black''>felipemaiapolo@gmail.com</a></p>
+             <p><a href="mailto:" class="btn-custom" style='color: black''>felipemaiapolo [at] gmail [dot] com</a></p>
           </div>
         </div>
     		
